# Farbstroem

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  CONTRIBUTING.md  Dockerfile  HANDOFF.md  Makefile  README.md  Streaming.md  THIRD_PARTY_NOTICES.html  THIRD_PARTY_NOTICES.md  To-Do List.md  caddyfile.example  deletelater.txt  deploy.sh  docker-compose.dev.yml  docker-compose.override.yml  docker-compose.yml  entrypoint.sh  install.sh  supervisord.conf
.github/: dependabot.yml
backend/: .gitignore  Cargo.toml  DEVELOPMENT.md  Dockerfile  about.hbs  about.toml  package.json  schema.sql  secrets.env.example
backend/.cargo/: audit.toml  config.toml
backend/src/: auth.rs  config.rs  credentials.rs  db.js  db.rs  error.rs  events.rs  index.js  lib.rs  livekit.rs  main.rs  presence.rs  state.rs  tasks.rs  uploads.rs  ws.rs
backend/src/middleware/: auth.js
backend/src/routes/: admin_files.rs  admin_settings.rs  auth.js  auth.rs  branding.js  branding.rs  files.js  files.rs  metrics.rs  mod.rs  ome.js  ome.rs  rate_limit.rs  rooms-public.js  rooms.js  rooms.rs  rooms_public.rs  stream-keys.js  stream_keys.rs  watch.rs  webhook.js  webhook.rs
backend/src/ws/: hub.js
backend/tests/: admin_settings_test.rs  auth_test.rs  branding_test.rs  expiry_test.rs  files_test.rs  ome_test.rs  rooms_public_test.rs  rooms_test.rs  stream_keys_test.rs  watch_test.rs  webhook_test.rs
backend/tests/common/: mod.rs
caddy/: Caddyfile
docs/: CONTRIBUTING.md  Design.md  Development.md  Streaming.md
frontend/: package-lock.json  package.json  tsconfig.json
(+45 files in other folders)
